[gd_scene load_steps=3 format=3 uid="uid://c741sshssnf7x"]

[ext_resource type="Script" path="res://overworld/textbox/OverworldTextboxOptions.gd" id="1_dneu5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vpk51"]
bg_color = Color(0.2, 0.2, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[node name="OverworldTextboxMCOptions" type="CanvasLayer"]
script = ExtResource("1_dneu5")

[node name="TextboxContainer" type="MarginContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 963.0
offset_top = -323.0
offset_right = -7.0
offset_bottom = -152.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="TextboxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vpk51")

[node name="MarginContainer" type="MarginContainer" parent="TextboxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="Panel" type="Panel" parent="TextboxContainer/MarginContainer"]
visible = false
layout_mode = 2

[node name="OptionsContainer" type="VBoxContainer" parent="TextboxContainer/MarginContainer"]
layout_mode = 2
